--- a/src/app/tour-heroes/tour-heroes.component.html
+++ b/src/app/tour-heroes/tour-heroes.component.html
@@ -1,15 +1,16 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor = "let hero of heroes">
+  <li *ngFor = "let hero of heroes" (click) = "onSelect(hero)" [class.selected]="hero === selectedHero">
     <span class="badge" >{{hero.id}}</span>{{ hero.name }}
   </li>
 </ul>
 
-<h3>{{hero.name | uppercase }} Details</h3>
-<div><span>Id : {{ hero.id }}</span></div>
-<div><span>Name : {{ hero.name }}</span></div>
-<div>
-  <label>
-    Name : <input [(ngModel)] ="hero.name" placeholder="name" />
-  </label>
+<div *ngIf="selectedHero">
+  <h3>{{selectedHero.name | uppercase }} Details</h3>
+  <div><span>Id : {{ selectedHero.id }}</span></div>
+  <div>
+    <label>
+      Name : <input [(ngModel)] ="selectedHero.name" placeholder="name" />
+    </label>
+  </div>
 </div>
