--- a/src/app/tour-heroes/tour-heroes.component.html
+++ b/src/app/tour-heroes/tour-heroes.component.html
@@ -5,12 +5,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h3>{{selectedHero.name | uppercase }} Details</h3>
-  <div><span>Id : {{ selectedHero.id }}</span></div>
-  <div>
-    <label>
-      Name : <input [(ngModel)] ="selectedHero.name" placeholder="name" />
-    </label>
-  </div>
-</div>
+<app-hero-details [hero]="selectedHero"></app-hero-details>
