--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     {{ title }}
   </h1>
   <app-tour-heroes></app-tour-heroes>
-
+  <app-messages></app-messages>
+</div>
 <router-outlet></router-outlet>
