--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
   <h1>
     {{ title }}
   </h1>
-  <app-tour-heroes></app-tour-heroes>
+  <nav>
+    <a routerLink='/heroes' >Heroes</a>
+    <a routerLink='/dashboard'>Dashboard</a>
+  </nav>
+  <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
-<router-outlet></router-outlet>
+
