--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="hero">
 
   <h3>{{hero.name | uppercase}} Details</h3>
-  <div><span>id: </span>{{hero.id}}</div>
+  <div><span>Id: </span>{{hero.id}}</div>
   <div>
-    <label>name:
+    <label>Name:
       <input [(ngModel)]="hero.name" placeholder="name"/>
     </label>
   </div>
-
+  <br />
+  <button (click)="goBack()">Go Back</button>
 </div>
