--- a/src/app/tour-heroes/tour-heroes.component.css
+++ b/src/app/tour-heroes/tour-heroes.component.css
@@ -50,3 +50,11 @@
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
+  a{
+    text-decoration: none;
+    color: #000;
+  }
+  a:visited{
+    text-decoration: none;
+    color: #000;
+  }
