--- a/src/app/tour-heroes/tour-heroes.component.html
+++ b/src/app/tour-heroes/tour-heroes.component.html
@@ -1,10 +1,20 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
+
   <li *ngFor = "let hero of heroes">
-    <a routerLink="/detail/{{hero.id}}">
-      <span class="badge" >{{hero.id}}</span>{{ hero.name }}
+      <a routerLink="/detail/{{hero.id}}">
+      <div>
+        <span class="badge" >{{hero.id}}</span>{{ hero.name }}
+      </div>
     </a>
   </li>
 </ul>
 
+
+<div>
+  <label>Hero Name:  
+    <input #heroName />
+  </label>
+  <button (click)="add(heroName.value); heroName.value=''">Add</button> 
+</div>
 
