--- a/src/app/tour-heroes/tour-heroes.component.html
+++ b/src/app/tour-heroes/tour-heroes.component.html
@@ -3,10 +3,9 @@
 
   <li *ngFor = "let hero of heroes">
       <a routerLink="/detail/{{hero.id}}">
-      <div>
         <span class="badge" >{{hero.id}}</span>{{ hero.name }}
-      </div>
     </a>
+    <button (click)="delete(hero)" class="delete" title="delete hero">x</button>
   </li>
 </ul>
 
